<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/button_blue"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/padding10"
        android:layout_marginHorizontal="@dimen/padding10"
        app:cardCornerRadius="@dimen/padding20">


        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="327dp"
            tools:layout_editor_absoluteY="302dp">


            <TextView
                android:id="@+id/shop_name"
                android:paddingVertical="@dimen/padding15"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shop_name"
                android:textSize="@dimen/text30" />

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/text17"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding30" />



            <Button
                android:id="@+id/button_view_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/view_food" />

            <Button
                android:id="@+id/button_add_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/add_food" />
            <Button
                android:id="@+id/button_invent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/inventory" />

            <Button
                android:id="@+id/button_reservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/reservation" />

            <Button
                android:id="@+id/button_summery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/summery" />

            <Button
                android:id="@+id/button_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/qr" />

            <Button
                android:id="@+id/button_signout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/signout" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>