<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Add_FoodItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="151dp"
        android:padding="@dimen/activity_vertical_margin"

        >



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_name"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/food_name"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/food_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_price"
            app:helperText="@string/requierd"
            app:boxBackgroundMode="outline"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textSize="20sp"
            android:text="@string/duration"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/min_pre_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/min_time"
                app:boxBackgroundMode="outline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_gravity="center"
                android:text="@string/to" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/max_pre_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/max_time"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



        <TextView
            android:id="@+id/food_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textSize="20sp"
            android:text="@string/food_type" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="true"
            android:orientation="horizontal"
            >

                <RadioButton
                    android:id="@+id/radioButton_veg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/radio_veg"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButton_non_veg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_non_veg"
                    android:onClick="onRadioButtonClicked"/>


        </RadioGroup>




        <Button
            android:id="@+id/button_done_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle2"
            android:layout_gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/done" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>