<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titleinv"
            android:padding="@dimen/padding5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/left"
                android:textStyle="bold"
                android:textSize="@dimen/padding30">
            </Button>

            <TextView
                android:id="@+id/date"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/padding30"
                android:layout_weight="5"
                android:background="@color/white"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="@dimen/padding15">
            </TextView>

            <Button
                android:id="@+id/after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/right"
                android:textStyle="bold"
                android:textSize="@dimen/padding30">
            </Button>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="4dp"
            android:scrollbars="vertical"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>