<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/edit_profile_phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_gravity="center"
            android:textSize="@dimen/large_text"
            android:textColor="@color/button_blue"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shopname_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            android:layout_marginBottom="@dimen/padding5"
        >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shopname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textfieldhight"
                android:hint="@string/shop_name"
                android:layout_marginBottom="@dimen/padding5"
                >

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shopaddress_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            android:layout_marginBottom="@dimen/padding5"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shopaddress_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textfieldhight"
                android:hint="@string/address"
                android:layout_marginBottom="@dimen/padding5"
                >

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/edit_profile_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle1"
                android:text="@string/done"
                android:onClick="onDone"

                >
            </Button>

                <Button
                    android:id="@+id/edit_profile_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonstyle2"
                    android:text="@string/button_cancel"
                    android:onClick="onDone"

                    >



            </Button>


        </LinearLayout>


















    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>