<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_margin="@dimen/padding5"
                android:id="@+id/order_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/button_blue"
                android:layout_gravity="center"
                android:text="@string/order"
                android:textSize="@dimen/text22"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_margin="@dimen/padding5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/text17"
                    android:layout_margin="@dimen/padding5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:textStyle="italic"
                    android:layout_weight="1">
                </TextView>
                <TextView
                    android:textSize="@dimen/text17"
                    android:layout_margin="@dimen/padding5"
                    android:id="@+id/order_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_weight="1">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/padding5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/text17"
                    android:layout_margin="@dimen/padding5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Payment Method"
                    android:textStyle="italic"
                    android:layout_weight="1">
                </TextView>
                <TextView
                    android:textSize="@dimen/text17"
                    android:layout_margin="@dimen/padding5"
                    android:id="@+id/order_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_weight="1">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/padding5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/text17"
                    android:layout_margin="@dimen/padding5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="Payment Status"
                    android:layout_weight="1">
                </TextView>
                <TextView
                    android:textSize="@dimen/text17"
                    android:layout_margin="@dimen/padding5"
                    android:id="@+id/order_payment_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_weight="1">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/padding5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </View>
                <Button
                    android:id="@+id/order_payment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:background="@drawable/paid_button"
                    android:textColor="@color/white">

                </Button>
            </LinearLayout>

            <Button
                android:id="@+id/cancel_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding10"
                android:background="@drawable/cancelbutton"
                android:text="@string/cancel"
                android:textColor="@color/white">

            </Button>



        </LinearLayout>






    </ScrollView>







</LinearLayout>
